--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_nav_home_admin_to_fragmentAdminViewFeedback"
             app:destination="@id/fragmentAdminViewFeedback" />
+        <action
+            android:id="@+id/action_nav_home_admin_to_fragmentAdminDeliveryManagement"
+            app:destination="@id/fragmentAdminDeliveryManagement" />
     </fragment>
     <fragment
         android:id="@+id/nav_popular_car_parts_admin"
@@ -272,4 +275,34 @@
             android:id="@+id/action_fragmentAdminViewFeedback_to_nav_home_admin"
             app:destination="@id/nav_home_admin" />
     </fragment>
+    <fragment
+        android:id="@+id/fragmentAdminDeliveryManagement"
+        android:name="tarc.edu.carpartsapp.FragmentAdminDeliveryManagement"
+        android:label="fragment_admin_delivery_management"
+        tools:layout="@layout/fragment_admin_delivery_management" >
+        <action
+            android:id="@+id/action_fragmentAdminDeliveryManagement_to_fragmentAdminViewAllDeliveryStatus"
+            app:destination="@id/fragmentAdminViewAllDeliveryStatus" />
+        <action
+            android:id="@+id/action_fragmentAdminDeliveryManagement_to_createDeliveryStatus2"
+            app:destination="@id/createDeliveryStatus2" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentAdminViewAllDeliveryStatus"
+        android:name="tarc.edu.carpartsapp.FragmentAdminViewAllDeliveryStatus"
+        android:label="fragment__admin__view__all__delivery__status"
+        tools:layout="@layout/fragment__admin__view__all__delivery__status" >
+        <action
+            android:id="@+id/action_fragmentAdminViewAllDeliveryStatus_to_adminUpdateDeliveryStatus"
+            app:destination="@id/adminUpdateDeliveryStatus" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminUpdateDeliveryStatus"
+        android:name="tarc.edu.carpartsapp.Admin.AdminUpdateDeliveryStatus"
+        android:label="fragment_admin_update_delivery_status"
+        tools:layout="@layout/fragment_admin_update_delivery_status" />
+    <fragment
+        android:id="@+id/createDeliveryStatus2"
+        android:name="tarc.edu.carpartsapp.Admin.CreateDeliveryStatus"
+        android:label="CreateDeliveryStatus" />
 </navigation>
