--- a/app/src/main/res/menu/activity_customer_drawer.xml
+++ b/app/src/main/res/menu/activity_customer_drawer.xml
@@ -29,7 +29,6 @@
                     android:title="By Credit Card" />
             </menu>
         </item>
-
         <item
             android:title="Others" >
             <menu>
@@ -37,6 +36,10 @@
                    android:id="@+id/nav_feedback_customer"
                     android:icon="@drawable/ic_baseline_feedback_24"
                     android:title="@string/menu_feedback" />
+                <item
+                    android:id="@+id/nav_returnProduct_customer"
+                    android:icon="@drawable/ic_baseline_keyboard_return_24"
+                    android:title="Return Product" />
                 <item
                    android:id="@+id/nav_aboutUs_customer"
                     android:icon="@drawable/ic_baseline_info_24"
