--- a/app/src/main/res/navigation/customer_navigation.xml
+++ b/app/src/main/res/navigation/customer_navigation.xml
@@ -172,5 +172,30 @@
         android:id="@+id/nav_returnProduct_customer"
         android:name="tarc.edu.carpartsapp.Customer.ReturnProductSelectionFragment"
         android:label="Return Product"
-        tools:layout="@layout/fragment_return_product" />
+        tools:layout="@layout/fragment_return_product" >
+        <action
+            android:id="@+id/action_nav_returnProduct_customer_to_nav_returnProductCashOnDelivery_customer"
+            app:destination="@id/nav_returnProductCashOnDelivery_customer" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_returnProductCashOnDelivery_customer"
+        android:name="tarc.edu.carpartsapp.Customer.ReturnProductCashOnDeliveryFragment"
+        android:label="Cash On Delivery"
+        tools:layout="@layout/fragment_return_product_cash_on_delivery" >
+        <action
+            android:id="@+id/action_nav_returnProductCashOnDelivery_customer_to_nav_returnProduct_customer"
+            app:destination="@id/nav_returnProduct_customer" />
+        <action
+            android:id="@+id/action_nav_returnProductCashOnDelivery_customer_to_nav_requestReturnProduct_customer"
+            app:destination="@id/nav_requestReturnProduct_customer" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_requestReturnProduct_customer"
+        android:name="tarc.edu.carpartsapp.Customer.RequestReturnProductFragment"
+        android:label="Request Return Product"
+        tools:layout="@layout/fragment_request_return_product" >
+        <action
+            android:id="@+id/action_nav_requestReturnProduct_customer_to_nav_returnProductCashOnDelivery_customer"
+            app:destination="@id/nav_returnProductCashOnDelivery_customer" />
+    </fragment>
 </navigation>
