--- a/app/src/main/res/layout/fragment_home_admin.xml
+++ b/app/src/main/res/layout/fragment_home_admin.xml
@@ -120,26 +120,29 @@
 
         <ImageView
             android:id="@+id/imageViewDelivery"
-            android:layout_width="411dp"
-            android:layout_height="338dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:clickable="true"
             android:maxWidth="500dp"
             android:maxHeight="300dp"
             android:scaleType="fitCenter"
             android:src="@drawable/delivery_picture_new"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewCustomerFeedback" />
+            app:layout_constraintTop_toBottomOf="@+id/imageViewCustomerFeedback"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Delivery Management"
+            android:layout_marginTop="20dp"
+            android:text="Delivery\n Management"
+            android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.838"
+            app:layout_constraintHorizontal_bias="0.939"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageViewCustomerFeedback" />
 
