--- a/app/src/main/res/layout/return_product_credit_card_item.xml
+++ b/app/src/main/res/layout/return_product_credit_card_item.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/return_product_credit_card_item_card_view"
     android:layout_width="match_parent"
-    android:layout_height="320dp"
+    android:layout_height="360dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
     android:elevation="4dp"
@@ -119,7 +119,7 @@
             android:id="@+id/return_product_credit_card_item_order_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView4"
+            android:text="TextView5"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/textViewOrderDate" />
 
@@ -127,7 +127,7 @@
             android:id="@+id/return_product_credit_card_item_order_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView5"
+            android:text="TextView6"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/textViewOrderTime" />
 
@@ -135,19 +135,37 @@
             android:id="@+id/textViewOrderID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="10dp"
             android:text="Order ID"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/return_product_credit_card_item_warranty" />
+            app:layout_constraintTop_toBottomOf="@+id/return_product_credit_card_item_total_quantity" />
 
         <TextView
             android:id="@+id/return_product_credit_card_item_order_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView3"
+            android:text="TextView4"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/textViewOrderID" />
+
+        <TextView
+            android:id="@+id/textViewTotalQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Total Quantity"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/return_product_credit_card_item_warranty" />
+
+        <TextView
+            android:id="@+id/return_product_credit_card_item_total_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView3"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTotalQuantity" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
