--- a/app/src/main/res/layout/fragment_create_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_create_delivery_status.xml
@@ -100,14 +100,14 @@
         android:id="@+id/buttonCreate"
         android:layout_width="260dp"
         android:layout_height="49dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="60dp"
         android:backgroundTint="#FDC12A"
         android:text="Create Delivery Status"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outputCurrentDate" />
+        app:layout_constraintTop_toBottomOf="@+id/outputOrderAmount" />
 
     <TextView
         android:id="@+id/labelUID"
@@ -181,4 +181,25 @@
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="Order Amount"
+        app:layout_constraintEnd_toEndOf="@+id/labelUID"
+        app:layout_constraintHorizontal_bias="0.255"
+        app:layout_constraintStart_toStartOf="@+id/labelUID"
+        app:layout_constraintTop_toBottomOf="@+id/labelUID" />
+
+    <TextView
+        android:id="@+id/outputOrderAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="@+id/outputUserid"
+        app:layout_constraintHorizontal_bias="0.362"
+        app:layout_constraintStart_toStartOf="@+id/outputUserid"
+        app:layout_constraintTop_toBottomOf="@+id/outputUserid" />
 </androidx.constraintlayout.widget.ConstraintLayout>
