--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -144,7 +144,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/buttonProfile"
+            android:id="@+id/buttonSaveProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FDC12A"
