--- a/app/src/main/res/navigation/customer_navigation.xml
+++ b/app/src/main/res/navigation/customer_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_nav_profile_customer_to_fragmentEditProfile2"
             app:destination="@id/fragmentEditProfile2" />
+        <action
+            android:id="@+id/action_nav_profile_customer_to_fragmentChangeProfilePicture"
+            app:destination="@id/fragmentChangeProfilePicture" />
     </fragment>
     <fragment
         android:id="@+id/nav_myCart_customer"
@@ -221,4 +224,13 @@
         android:name="tarc.edu.carpartsapp.Customer.ReturnProductStatusFragment"
         android:label="Return Product Status"
         tools:layout="@layout/fragment_return_product_status" />
+    <fragment
+        android:id="@+id/fragmentChangeProfilePicture"
+        android:name="tarc.edu.carpartsapp.FragmentChangeProfilePicture"
+        android:label="fragment_change_profile_picture"
+        tools:layout="@layout/fragment_change_profile_picture" >
+        <action
+            android:id="@+id/action_fragmentChangeProfilePicture_to_nav_profile_customer"
+            app:destination="@id/nav_profile_customer" />
+    </fragment>
 </navigation>
